# dodo

./: .rustfmt.toml  Cargo.toml
dodo-cli/: Cargo.toml  hehehe
dodo-cli/src/: error.rs  file_ext.rs  files.rs  formatting.rs  main.rs  parser.rs
dodo-internals/: Cargo.toml
dodo-internals/src/: checkbox.rs  checklist.rs  lib.rs  priority.rs  task.rs  task_set.rs  utils.rs
dodod/: Cargo.toml
