[package]
name = "dodo-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde  = { version = "1.0.137", features = ["derive"] }
bincode = "1.3.3"
dodo-internals = { path = "../dodo-internals" }
directories = "3.0.2"
thiserror = "1.0.31"
fs-err = "2.7.0"
edit = "0.1.4"
